template_linux01/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_azurestackvm_name": {
            "defaultValue": "azurestackvm",
            "type": "String"
        },
        "networkInterfaces_azurestackvm762_name": {
            "defaultValue": "azurestackvm762",
            "type": "String"
        },
        "networkInterfaces_azurestackvm998_name": {
            "defaultValue": "azurestackvm998",
            "type": "String"
        },
        "publicIPAddresses_azureStackVm_ip_name": {
            "defaultValue": "azureStackVm-ip",
            "type": "String"
        },
        "virtualNetworks_azureStackRcg_vnet_name": {
            "defaultValue": "azureStackRcg-vnet",
            "type": "String"
        },
        "publicIPAddresses_azurestackvmip337_name": {
            "defaultValue": "azurestackvmip337",
            "type": "String"
        },
        "storageAccounts_azurestackrcgdiag908_name": {
            "defaultValue": "azurestackrcgdiag908",
            "type": "String"
        },
        "networkSecurityGroups_azureStackVm_nsg_name": {
            "defaultValue": "azureStackVm-nsg",
            "type": "String"
        },
        "schedules_shutdown_computevm_azurestackvm_name": {
            "defaultValue": "shutdown-computevm-azurestackvm",
            "type": "String"
        },
        "subnets_default_name": {
            "defaultValue": "default",
            "type": "String"
        },
        "securityRules_SSH_name": {
            "defaultValue": "SSH",
            "type": "String"
        },
        "securityRules_RDP_name": {
            "defaultValue": "RDP",
            "type": "String"
        },
        "securityRules_HTTP_name": {
            "defaultValue": "HTTP",
            "type": "String"
        },
        "securityRules_HTTPS_name": {
            "defaultValue": "HTTPS",
            "type": "String"
        },
        "disks_azureStackVm_OsDisk_1_bf71815b7ef046b381f33d41af16e86d_name": {
            "defaultValue": "azureStackVm_OsDisk_1_bf71815b7ef046b381f33d41af16e86d",
            "type": "String"
        },
        "virtualMachines_azurestackvm_id": {
            "defaultValue": "/subscriptions/e6fcea0b-3763-447d-bc49-b568f6716972/resourceGroups/azureStackRcg/providers/Microsoft.Compute/disks/azurestackvm_OsDisk_1_7bacf9f20715479aac9eb7e93f8d6e42",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/e6fcea0b-3763-447d-bc49-b568f6716972/resourceGroups/azureStackRcg/providers/Microsoft.Compute/disks/azureStackVm_OsDisk_1_bf71815b7ef046b381f33d41af16e86d'.",
            "type": "Microsoft.Compute/disks",
            "sku": {
                "name": "Premium_LRS",
                "tier": "Premium"
            },
            "name": "[parameters('disks_azureStackVm_OsDisk_1_bf71815b7ef046b381f33d41af16e86d_name')]",
            "apiVersion": "2018-04-01",
            "location": "eastus2",
            "scale": null,
            "properties": {
                "osType": "Linux",
                "creationData": {
                    "createOption": "FromImage",
                    "imageReference": {
                        "id": "/Subscriptions/e6fcea0b-3763-447d-bc49-b568f6716972/Providers/Microsoft.Compute/Locations/eastus2/Publishers/Canonical/ArtifactTypes/VMImage/Offers/UbuntuServer/Skus/18.04-LTS/Versions/18.04.201807240"
                    }
                },
                "diskSizeGB": 30
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e6fcea0b-3763-447d-bc49-b568f6716972/resourceGroups/azureStackRcg/providers/Microsoft.Compute/virtualMachines/azurestackvm'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_azurestackvm_name')]",
            "apiVersion": "2017-12-01",
            "location": "eastus2",
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_B4ms"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "18.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_azurestackvm_name'),'_OsDisk_1_7bacf9f20715479aac9eb7e93f8d6e42')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS",
                            "id": "[parameters('virtualMachines_azurestackvm_id')]"
                        },
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_azurestackvm_name')]",
                    "adminUsername": "jumpuser",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_azurestackvm998_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "https://agilb884ubuntudiag628.blob.core.windows.net/"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_azurestackvm998_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e6fcea0b-3763-447d-bc49-b568f6716972/resourcegroups/azurestackrcg/providers/microsoft.devtestlab/schedules/shutdown-computevm-azurestackvm'.",
            "type": "microsoft.devtestlab/schedules",
            "name": "[parameters('schedules_shutdown_computevm_azurestackvm_name')]",
            "apiVersion": "2016-05-15",
            "location": "eastus2",
            "scale": null,
            "properties": {
                "status": "Enabled",
                "taskType": "ComputeVmShutdownTask",
                "dailyRecurrence": {
                    "time": "1900"
                },
                "timeZoneId": "UTC",
                "notificationSettings": {
                    "status": "Disabled",
                    "timeInMinutes": 30
                },
                "targetResourceId": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_azurestackvm_name'))]",
                "provisioningState": "Succeeded",
                "uniqueIdentifier": "0335b9c2-c4fe-4284-98e6-486f963361eb"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_azurestackvm_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e6fcea0b-3763-447d-bc49-b568f6716972/resourceGroups/azureStackRcg/providers/Microsoft.Network/networkInterfaces/azurestackvm762'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_azurestackvm762_name')]",
            "apiVersion": "2018-02-01",
            "location": "eastus2",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "b603c4c3-39a2-435f-9d2c-4095b46fd776",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"26aadc8a-f440-44cf-80db-20d9646ecc88\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.4.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_azureStackVm_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_azureStackRcg_vnet_name'), parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": []
                },
                "enableAcceleratedNetworking": true,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_azureStackVm_nsg_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_azureStackVm_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_azureStackRcg_vnet_name'), parameters('subnets_default_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_azureStackVm_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e6fcea0b-3763-447d-bc49-b568f6716972/resourceGroups/azureStackRcg/providers/Microsoft.Network/networkInterfaces/azurestackvm998'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_azurestackvm998_name')]",
            "apiVersion": "2018-02-01",
            "location": "eastus2",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "26f5b5a2-71a8-4689-b0f3-beb7513b6d74",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"b697c4f7-57a5-4392-b0d4-415bf253bb3c\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.4.5",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_azurestackvmip337_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_azureStackRcg_vnet_name'), parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "ahsf0tfquh2udm5utc2orzxfng.cx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-0D-91-61",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_azureStackVm_nsg_name'))]"
                },
                "primary": true
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_azurestackvmip337_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_azureStackRcg_vnet_name'), parameters('subnets_default_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_azureStackVm_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e6fcea0b-3763-447d-bc49-b568f6716972/resourceGroups/azureStackRcg/providers/Microsoft.Network/networkSecurityGroups/azureStackVm-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_azureStackVm_nsg_name')]",
            "apiVersion": "2018-02-01",
            "location": "eastus2",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "abc8e13a-024a-4583-bba1-059d0f3e7bd6",
                "securityRules": [
                    {
                        "name": "HTTP",
                        "etag": "W/\"d78e9d92-8fe8-43a9-a11f-2d3e724ec8ce\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "HTTPS",
                        "etag": "W/\"d78e9d92-8fe8-43a9-a11f-2d3e724ec8ce\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 320,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "SSH",
                        "etag": "W/\"d78e9d92-8fe8-43a9-a11f-2d3e724ec8ce\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 340,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "RDP",
                        "etag": "W/\"d78e9d92-8fe8-43a9-a11f-2d3e724ec8ce\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 360,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"d78e9d92-8fe8-43a9-a11f-2d3e724ec8ce\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"d78e9d92-8fe8-43a9-a11f-2d3e724ec8ce\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"d78e9d92-8fe8-43a9-a11f-2d3e724ec8ce\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"d78e9d92-8fe8-43a9-a11f-2d3e724ec8ce\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"d78e9d92-8fe8-43a9-a11f-2d3e724ec8ce\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"d78e9d92-8fe8-43a9-a11f-2d3e724ec8ce\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e6fcea0b-3763-447d-bc49-b568f6716972/resourceGroups/azureStackRcg/providers/Microsoft.Network/publicIPAddresses/azureStackVm-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('publicIPAddresses_azureStackVm_ip_name')]",
            "apiVersion": "2018-02-01",
            "location": "eastus2",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "bdcfe426-b0a8-4375-aad8-aa89d48abae0",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "azurestackvm",
                    "fqdn": "azurestackvm.eastus2.cloudapp.azure.com"
                },
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e6fcea0b-3763-447d-bc49-b568f6716972/resourceGroups/azureStackRcg/providers/Microsoft.Network/publicIPAddresses/azurestackvmip337'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('publicIPAddresses_azurestackvmip337_name')]",
            "apiVersion": "2018-02-01",
            "location": "eastus2",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "9db655d1-ff31-45a6-9966-16e2f9fe5f84",
                "ipAddress": "104.46.114.123",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e6fcea0b-3763-447d-bc49-b568f6716972/resourceGroups/azureStackRcg/providers/Microsoft.Network/virtualNetworks/azureStackRcg-vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_azureStackRcg_vnet_name')]",
            "apiVersion": "2018-02-01",
            "location": "eastus2",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "4c5de401-a1b0-41f9-b3f4-98b8e8e6e56e",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.4.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "etag": "W/\"74fc4f14-87f3-4c38-a673-7c1ac7cb0b1a\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.0.4.0/24"
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e6fcea0b-3763-447d-bc49-b568f6716972/resourceGroups/azureStackRcg/providers/Microsoft.Storage/storageAccounts/azurestackrcgdiag908'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_azurestackrcgdiag908_name')]",
            "apiVersion": "2018-02-01",
            "location": "eastus2",
            "tags": {},
            "scale": null,
            "properties": {
                "networkAcls": {
                    "bypass": "AzureServices",
                    "virtualNetworkRules": [],
                    "ipRules": [],
                    "defaultAction": "Allow"
                },
                "supportsHttpsTrafficOnly": false,
                "encryption": {
                    "services": {
                        "file": {
                            "enabled": true
                        },
                        "blob": {
                            "enabled": true
                        }
                    },
                    "keySource": "Microsoft.Storage"
                }
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e6fcea0b-3763-447d-bc49-b568f6716972/resourceGroups/azureStackRcg/providers/Microsoft.Network/networkSecurityGroups/azureStackVm-nsg/securityRules/HTTP'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_azureStackVm_nsg_name'), '/', parameters('securityRules_HTTP_name'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_azureStackVm_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e6fcea0b-3763-447d-bc49-b568f6716972/resourceGroups/azureStackRcg/providers/Microsoft.Network/networkSecurityGroups/azureStackVm-nsg/securityRules/HTTPS'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_azureStackVm_nsg_name'), '/', parameters('securityRules_HTTPS_name'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 320,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_azureStackVm_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e6fcea0b-3763-447d-bc49-b568f6716972/resourceGroups/azureStackRcg/providers/Microsoft.Network/networkSecurityGroups/azureStackVm-nsg/securityRules/SSH'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_azureStackVm_nsg_name'), '/', parameters('securityRules_SSH_name'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 340,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_azureStackVm_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e6fcea0b-3763-447d-bc49-b568f6716972/resourceGroups/azureStackRcg/providers/Microsoft.Network/networkSecurityGroups/azureStackVm-nsg/securityRules/RDP'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_azureStackVm_nsg_name'), '/', parameters('securityRules_RDP_name'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 360,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_azureStackVm_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/e6fcea0b-3763-447d-bc49-b568f6716972/resourceGroups/azureStackRcg/providers/Microsoft.Network/virtualNetworks/azureStackRcg-vnet/subnets/default'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_azureStackRcg_vnet_name'), '/', parameters('subnets_default_name'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.4.0/24"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_azureStackRcg_vnet_name'))]"
            ]
        }
    ]
}
